examples/pass/errorMain4.c
int main(int n){
    print("no deberia imprimir esto, errorMain4");
}