examples/error/errorMain4.c
int main(int n){
    printf("no deberia imprimir esto, errorMain4");
}
